@@ -5,10 +5,6 @@ import com.google.common.base.Strings;
 import org.apache.tomcat.util.http.fileupload.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-//import sun.misc.BASE64Decoder;
-//import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import java.io.BufferedReader;
@@ -18,6 +14,7 @@ import java.security.*;
 import java.security.interfaces.RSAKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 /**
  *  RSA常用
@@ -68,9 +65,13 @@ public class RSAUtil {
     public static PrivateKey initPrivateKeyByContent(String keyContent) throws Exception {
         Preconditions.checkNotNull(keyContent);
 
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
-
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+        // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory kf = KeyFactory.getInstance(ENCRYPT_ALGORITHM);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyByte);
         return kf.generatePrivate(keySpec);
@@ -112,9 +113,11 @@ public class RSAUtil {
     public static PublicKey initPublicKeyByContent(String keyContent) throws Exception{
         Preconditions.checkNotNull(keyContent, "检查安全存储配置或是否已初始化");
 
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
-
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+// 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory kf = KeyFactory.getInstance(ENCRYPT_ALGORITHM);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyByte);
         return kf.generatePublic(keySpec);
@@ -135,9 +138,12 @@ public class RSAUtil {
 
         byte[] signByte = signature.sign();
 
-        BASE64Encoder base64Encoder = new BASE64Encoder();
-
-        return base64Encoder.encodeBuffer(signByte);
+//        BASE64Encoder base64Encoder = new BASE64Encoder();
+//
+//        return base64Encoder.encodeBuffer(signByte);
+        // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Encoder
+        Base64.Encoder base64Encoder = Base64.getEncoder();
+        return base64Encoder.encodeToString(signByte);
     }
 
     /**
@@ -155,9 +161,11 @@ public class RSAUtil {
             signature.initVerify(publicKey);
             signature.update(content.getBytes(charset));
 
-            BASE64Decoder base64Decoder = new BASE64Decoder();
-            byte[] keyByte = base64Decoder.decodeBuffer(sign);
-
+//            BASE64Decoder base64Decoder = new BASE64Decoder();
+//            byte[] keyByte = base64Decoder.decodeBuffer(sign);
+// 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+            Base64.Decoder base64Decoder = Base64.getDecoder();
+            byte[] keyByte = base64Decoder.decode(sign);
             return signature.verify(keyByte);
         } catch (Exception e) {
             logger.error("验签出现异常",e);
@@ -199,9 +207,12 @@ public class RSAUtil {
             offSet = i * maxEncryptBlock;
         }
 
-        BASE64Encoder base64Encoder = new BASE64Encoder();
-
-        return base64Encoder.encodeBuffer(out.toByteArray());
+//        BASE64Encoder base64Encoder = new BASE64Encoder();
+//
+//        return base64Encoder.encodeBuffer(out.toByteArray());
+        // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Encoder
+        Base64.Encoder base64Encoder = Base64.getEncoder();
+        return base64Encoder.encodeToString(out.toByteArray());
     }
 
     /**
@@ -219,9 +230,11 @@ public class RSAUtil {
         Cipher cipher = Cipher.getInstance(ENCRYPT_ALGORITHM);
         cipher.init(Cipher.DECRYPT_MODE,key);
 
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] encryptedData = base64Decoder.decodeBuffer(encryptedContent);
-
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] encryptedData = base64Decoder.decodeBuffer(encryptedContent);
+        // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] encryptedData = base64Decoder.decode(encryptedContent);
         int inputLen = encryptedData.length;
         ByteArrayOutputStream out = new ByteArrayOutputStream();
         int offSet = 0;
