@@ -2,7 +2,7 @@ package com.example.firstdemo.demo.decrypt;
 
 import com.example.firstdemo.util.TestDemoMain;
 import org.apache.commons.codec.CharEncoding;
-import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Decoder;
 
 import java.io.FileInputStream;
 import java.io.InputStream;
@@ -11,6 +11,7 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.Map;
 import java.util.Properties;
 
@@ -41,8 +42,11 @@ public class TestDecrypt {
      * @throws Exception
      */
     public static PublicKey getPubKey(String keyContent) throws Exception {
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+        // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyByte);
         return keyFactory.generatePublic(keySpec);
@@ -55,8 +59,10 @@ public class TestDecrypt {
      * @throws Exception
      */
     public static PrivateKey getPrivateKey(String keyContent) throws Exception {
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory kf = KeyFactory.getInstance("RSA");
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyByte);
         return kf.generatePrivate(keySpec);
