@@ -4,7 +4,7 @@ package com.example.firstdemo.demo.encrypt;
 import com.alibaba.fastjson.JSON;
 import com.example.firstdemo.util.JsonSerializer;
 import com.example.firstdemo.util.TestDemoMain;
-import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Decoder;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -15,6 +15,7 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.Map;
 import java.util.Properties;
 
@@ -57,8 +58,10 @@ public class TestEncrypt {
      * @throws Exception
      */
     public static PublicKey getPubKey(String keyContent) throws Exception {
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyByte);
         return keyFactory.generatePublic(keySpec);
@@ -71,8 +74,10 @@ public class TestEncrypt {
      * @throws Exception
      */
     public static PrivateKey getPrivateKey(String keyContent) throws Exception {
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+//        byte[] keyByte = base64Decoder.decodeBuffer(keyContent);
+        Base64.Decoder base64Decoder = Base64.getDecoder();
+        byte[] keyByte = base64Decoder.decode(keyContent);
         KeyFactory kf = KeyFactory.getInstance("RSA");
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyByte);
         return kf.generatePrivate(keySpec);
